kubevirt/vms/overlays/asa-ds-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asa-ds-1
spec:
  type: LoadBalancer
  selector:
    kubevirt.io/vm: asa-ds-1
  ports:
    - name: ark
      port: 27015
      targetPort: 27015
      protocol: TCP
    - name: ark-udp
      port: 27015
      targetPort: 27015
      protocol: UDP
    - name: ark-rcon
      port: 27020
      targetPort: 27020
      protocol: TCP
    - name: ark-rcon-udp
      port: 27020
      targetPort: 27020
      protocol: UDP
    - name: ark-2
      port: 7777
      targetPort: 7777
      protocol: TCP
    - name: ark-2-udp
      port: 7777
      targetPort: 7777
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: asa-ds-1-ssh
  annotations:
    external-dns.alpha.kubernetes.io/hostname: asa-ds-1.k8s.labs.ahinh.me
spec:
  type: LoadBalancer
  selector:
    kubevirt.io/vm: asa-ds-1
  ports:
    - name: ssh
      port: 22
      targetPort: 22
